--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "description": "Build a online shop for applying the technologies I have learned. I used Mongoose for database, Node and Express for backend, React for front-end and redux for state management",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server/server.js",
+    "server": "nodemon server/server.js",
+    "client": "npm start --prefix client",
+    "dev": "concurrently \"npm run server\" \"npm run client\""
+
   },
   "repository": {
     "type": "git",
